# torch-infini

./: .clang-format  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: cpu.yml  lint.yml
csrc/: add.cpp  allocator.cpp  copy.cpp  device_guard.cpp  empty.cpp  event.cpp  hooks.cpp  host_allocator.cpp  infini_ops.cpp  infini_ops.h  infini_torch.h  init.cpp  runtime.cpp  stream.cpp  torch_infini.h
tests/: conftest.py  test_add.py  test_events.py  test_infini_ops.py  test_metadata.py  test_pinned_memory.py  test_runtime_selection.py  test_setup.py  test_smoke.py  test_streams.py  test_torch_version_guard.py
tests/conformance/: __init__.py  api_profile.json  backends.py  conftest.py  operator_oracle.py  reporting.py  test_add_operator.py  test_api_profile.py  test_api_report.py  test_api_surface.py  test_backend_adapter.py  test_device_contracts.py  test_event_contracts.py  test_stream_contracts.py  workloads.py
tests/cpp/: infini_ops_test.cpp  pinned_memory_test.cpp
tools/: report_api_gaps.py
torch_infini/: __init__.py  _compatibility.py  infini.py
