[build-system]
requires = ["setuptools>=69", "wheel", "torch>=2.12,<2.14"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-infini"
version = "0.1.0"
description = "PyTorch PrivateUse1 plugin for the Infini accelerator stack"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = ["torch>=2.12,<2.14"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
]

[project.optional-dependencies]
dev = [
    "clang-format==19.1.4",
    "pytest",
    "pyyaml>=6",
    "ruff==0.15.21",
    "tomli>=1; python_version < '3.11'",
]

[tool.setuptools]
packages = ["torch_infini"]

[tool.ruff]
line-length = 88
src = ["torch_infini", "tests", "tools"]
exclude = [
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "E",
    "F",
    "PT",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = [
]

[tool.ruff.lint.per-file-ignores]
"torch_infini/__init__.py" = ["E402", "F401"]
